[gd_scene load_steps=6 format=3 uid="uid://tei15ubd5jjw"]

[ext_resource type="Script" path="res://scenes/scripts/user/new_user.gd" id="1_62hot"]
[ext_resource type="Texture2D" uid="uid://63jj4k0x1bh8" path="res://assets/images/backgrounds/user/new_user.png" id="2_wx3sb"]
[ext_resource type="Texture2D" uid="uid://dasl0cdlvjjg8" path="res://assets/images/buttons/scene/signup.png" id="3_t4vr0"]
[ext_resource type="PackedScene" uid="uid://de4nfw76jdtjm" path="res://scenes/users_ui/signup_user.tscn" id="4_4kygf"]
[ext_resource type="Texture2D" uid="uid://75yq65kc5g15" path="res://assets/images/buttons/external/exit.png" id="4_diki3"]

[node name="new_user" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_62hot")

[node name="ui_main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="ui_main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wx3sb")

[node name="bt_signup" type="Control" parent="ui_main"]
anchors_preset = 0
offset_left = 50.0
offset_top = 200.0
offset_right = 370.0
offset_bottom = 260.0

[node name="TextureRect" type="TextureRect" parent="ui_main/bt_signup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_t4vr0")
expand_mode = 2

[node name="bt_exit" type="Control" parent="ui_main"]
anchors_preset = 0
offset_left = 50.0
offset_top = 260.0
offset_right = 370.0
offset_bottom = 320.0

[node name="TextureRect" type="TextureRect" parent="ui_main/bt_exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_diki3")
expand_mode = 2

[node name="ui_signup" parent="." instance=ExtResource("4_4kygf")]
visible = false
layout_mode = 1

[connection signal="gui_input" from="ui_main/bt_signup" to="." method="_on_bt_signup_gui_input"]
[connection signal="gui_input" from="ui_main/bt_exit" to="." method="_on_bt_exit_gui_input"]
